# multi-agent-orchestrator

./: .env.example  .gitignore  README.md  debug_output.txt  main.py  orchestrator.py  pyproject.toml
agent_orchestrator/: main.py  orchestrator.py
agent_orchestrator/agents/: base.py  coding.py  context_tools.py  edit_tools.py  knowledge.py  math.py
agents/: base.py  general.py  math.py
